--- a/app/templates/rentals.hbs
+++ b/app/templates/rentals.hbs
@@ -5,4 +5,23 @@
   {{#link-to "about" class="button"}}
     About Us
   {{/link-to}}
+  {{#each this.model as |rental|}}
+    <article class="listing">
+      <div class="details">
+        <h3>{{rental.title}}</h3>
+        <div class="detail owner">
+          <span>Owner:</span> {{rental.owner}}
+        </div>
+        <div class="detail type">
+          <span>Type:</span> {{rental.category}}
+        </div>
+        <div class="detail location">
+          <span>Location:</span> {{rental.city}}
+        </div>
+        <div class="detail bedrooms">
+          <span>Number of bedrooms:</span> {{rental.bedrooms}}
+        </div>
+      </div>
+    </article>
+  {{/each}}
 </div>
