Added rentals/index, rentals/show nested route

--- a/app/templates/components/rental-listing.hbs
+++ b/app/templates/components/rental-listing.hbs
@@ -4,7 +4,7 @@
     <small>View Larger</small>
   </a>
   <div class="details">
-    <h3>{{this.rental.title}}</h3>
+    <h3>{{#link-to "rentals.show" rental class=rental.id}}{{this.rental.title}}{{/link-to}}</h3>
     <div class="detail owner">
       <span>Owner:</span> {{this.rental.owner}}
     </div>
